--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.6",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "5.14.6",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "html-react-parser": "^4.2.1",
-    "micromark": "^4.0.0",
+    "html-react-parser": "4.2.1",
+    "micromark": "4.0.0",
     "next": "13.4.19",
-    "openai": "^4.2.0",
+    "openai": "4.2.0",
     "react": "18.2.0",
+    "react-diff-viewer-continued": "3.2.6",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
   }
