--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "html-react-parser": "4.2.1",
-    "micromark": "4.0.0",
     "next": "13.4.19",
     "openai": "4.2.0",
     "react": "18.2.0",
     "react-diff-viewer-continued": "3.2.6",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "typescript": "5.2.2"
   }
 }
