--- a/package.json
+++ b/package.json
@@ -3,27 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "compile": "tsc",
     "dev": "next dev",
+    "lint": "next lint",
+    "prettier": "npx prettier --write .",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "^5.14.7",
-    "@mui/material": "5.14.6",
-    "@types/node": "20.5.6",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "openai": "4.2.0",
+    "@mui/icons-material": "5.14.16",
+    "@mui/material": "5.14.16",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.34",
+    "@types/react-dom": "18.2.14",
+    "eslint": "8.52.0",
+    "eslint-config-next": "14.0.1",
+    "next": "14.0.1",
+    "openai": "4.14.2",
     "react": "18.2.0",
-    "react-diff-viewer-continued": "3.2.6",
+    "react-diff-viewer-continued": "3.3.1",
     "react-dom": "18.2.0",
-    "react-use": "^17.4.0",
+    "react-use": "17.4.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
