--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.8.10",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
+    "@vercel/analytics": "1.1.1",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
