Monospace and markdown view modes added. Once API key set, don't show full key in the UI. Linting settings updated.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/jsx-sort-props": "warn", // Sort props alphabetically
+    "react-hooks/exhaustive-deps": "off" // A lot of false positives
+  }
 }
