--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-diff-viewer-continued": "3.3.1",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.0",
     "react-use": "17.4.0",
     "typescript": "5.2.2"
   },
