--- a/package.json
+++ b/package.json
@@ -4,34 +4,36 @@
   "private": true,
   "scripts": {
     "compile": "tsc",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
-    "prettier": "npx prettier --write .",
-    "build": "next build",
-    "start": "next start"
+    "prettier:write": "npx prettier --write .",
+    "build:release": "next build",
+    "run:release": "next start",
+    "updates:check": "npm-check-updates",
+    "updates:apply": "npm-check-updates -u && npm install"
   },
   "dependencies": {
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.14.16",
-    "@mui/material": "5.14.16",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.34",
-    "@types/react-dom": "18.2.14",
-    "@vercel/analytics": "1.1.1",
-    "eslint": "8.52.0",
-    "eslint-config-next": "14.0.1",
-    "next": "14.0.1",
-    "openai": "4.14.2",
-    "react": "18.2.0",
-    "react-diff-viewer-continued": "3.3.1",
-    "react-dom": "18.2.0",
-    "react-markdown": "^9.0.0",
-    "react-use": "17.4.0",
-    "typescript": "5.2.2"
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "6.1.0",
+    "@mui/material": "6.1.0",
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
+    "@vercel/analytics": "1.3.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.11",
+    "next": "14.2.11",
+    "openai": "4.60.0",
+    "react": "18.3.1",
+    "react-diff-viewer-continued": "3.4.0",
+    "react-dom": "18.3.1",
+    "react-markdown": "9.0.1",
+    "react-use": "17.5.1",
+    "typescript": "5.6.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.0.1",
-    "prettier": "3.0.3"
+    "@next/bundle-analyzer": "14.2.11",
+    "prettier": "3.3.3"
   }
 }
